--- a/inlämning1/index.html
+++ b/inlämning1/index.html
@@ -7,6 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Pixabay Image Search</h1>
+
+    <form>
+        <input type="text">
+
+        <select name="aaaaa" id="">
+            <option value="red">red</option>
+            <option value="blue">blue</option>
+            <option value="green">green</option>
+        </select>
+
+        <input type="submit">
+
+
+        <ul>
+            <li>
+                <img src="" alt="">
+                <p>animal, cat</p>
+                <p>takem py: test</p>
+            </li>
+        </ul>
+
+
+
+
+    </form>
 </body>
 </html>
