--- a/inlämning1/index.html
+++ b/inlämning1/index.html
@@ -17,21 +17,23 @@
             <option value="blue">blue</option>
             <option value="green">green</option>
         </select>
-
+        <!-- "grayscale", "transparent", "red", "orange", "yellow", "green", "turquoise", "blue", "lilac", "pink", "white", "gray", "black", "brown" -->
         <input type="submit">
 
 
-        <ul>
-            <li>
-                <img src="" alt="">
-                <p>animal, cat</p>
-                <p>takem py: test</p>
-            </li>
-        </ul>
 
 
 
 
     </form>
+        <ul>
+            <li>
+                <img src="" alt="">
+                <p>anim</p>
+                <p>takem py: test</p>
+            </li>
+        </ul>
+
+    <div id="button-div"></div>
 </body>
 </html>
