Added all the options

--- a/inlämning1/index.html
+++ b/inlämning1/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <h1>Pixabay Image Search</h1>
 
@@ -17,9 +18,20 @@
         <input type="text">
 
         <select name="aaaaa" id="">
-            <option value="red">red</option>
-            <option value="blue">blue</option>
-            <option value="green">green</option>
+            <option value="grayscale">Grayscale</option>
+            <option value="transparent">Transparent</option>
+            <option value="red">Red</option>
+            <option value="orange">Orange</option>
+            <option value="yellow">Yellow</option>
+            <option value="green">Green</option>
+            <option value="turquoise">Turquoise</option>
+            <option value="blue">Blue</option>
+            <option value="lilac">Lilac</option>
+            <option value="pink">Pink</option>
+            <option value="white">White</option>
+            <option value="gray">Gray</option>
+            <option value="black">Black</option>
+            <option value="brown">Brown</option>
         </select>
         <!-- "grayscale", "transparent", "red", "orange", "yellow", "green", "turquoise", "blue", "lilac", "pink", "white", "gray", "black", "brown" -->
         <input type="submit">
