added any color alternative and some syling

--- a/inlämning1/index.html
+++ b/inlämning1/index.html
@@ -18,6 +18,7 @@
         <input type="text">
 
         <select name="aaaaa" id="">
+            <option value="anyColor">Any color</option>
             <option value="grayscale">Grayscale</option>
             <option value="transparent">Transparent</option>
             <option value="red">Red</option>
