Javascript get info from form

--- a/inlämning1/index.html
+++ b/inlämning1/index.html
@@ -8,16 +8,16 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </head>
 
 <body>
     <h1>Pixabay Image Search</h1>
 
     <form>
-        <input type="text">
+        <input name="searchQuerry" type="text">
 
-        <select name="aaaaa" id="">
+        <select name="colorSelect" id="colorSelect">
             <option value="anyColor">Any color</option>
             <option value="grayscale">Grayscale</option>
             <option value="transparent">Transparent</option>
