--- a/inlämning1/index.html
+++ b/inlämning1/index.html
@@ -13,11 +13,9 @@
 
 <body>
     <h1>Pixabay Image Search</h1>
-
     <form>
         <input type="text">
-
-        <select name="aaaaa" id="">
+        <select name="search" id="">
             <option value="anyColor">Any color</option>
             <option value="grayscale">Grayscale</option>
             <option value="transparent">Transparent</option>
@@ -43,7 +41,7 @@
         <li>
             <img src="" alt="">
             <p>anim</p>
-            <p>takem py: test</p>
+            <p>taken by: test</p>
         </li>
     </ul>
 
