Fixed bug that caused multiple buttons to be created

--- a/inlämning1/index.html
+++ b/inlämning1/index.html
@@ -38,13 +38,7 @@
 
     </form>
 
-    <ul id="pictureList">
-        <li>
-            <img src="" alt="">
-            <p>anim</p>
-            <p>taken by: test</p>
-        </li>
-    </ul>
+    <ul id="pictureList"> </ul>
 
     <div id="buttonDiv"></div>
 </body>
