--- a/inlämning1/index.html
+++ b/inlämning1/index.html
@@ -39,7 +39,7 @@
     </form>
 
     <ul id="pictureList"> </ul>
-
+    <!-- insert tag and author, easier styling with css than JS -->
     <div id="buttonDiv"></div>
 </body>
 
