--- a/Inlämning 2/index.html
+++ b/Inlämning 2/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
+
 </head>
 <body>
-    
+
+
+    <h1>TO-DO List</h1>
+
+
+    <ul id= "tasks"></ul>
+    <input id= "textbox" type="text">
+    <button id="button">DO IT</button>
+
+
 </body>
 </html>
