--- a/Inlämning 2/index.html
+++ b/Inlämning 2/index.html
@@ -19,6 +19,7 @@
     <ul id= "tasks"></ul>
     <input id= "textbox" type="text">
     <button id="button">DO IT</button>
+    <button id="toggle" type="checkbox"></button>
 
 
 </body>
