--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -14,12 +14,11 @@
 
 
     <h1>TO-DO List</h1>
-
-
+    <div class= "container">
     <ul id= "tasks"></ul>
-    <input id= "textbox" type="text">
-    <button id="button">DO IT</button>
-    <button id="toggle" type="checkbox"></button>
+    <input type="text" id="userInput">
+    <button onclick="addListItem()">Add</button>
+    </div>
 
 
 </body>
