--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -13,7 +13,7 @@
 <body>
 
 
-    <h1>TO-DO List</h1>
+    <h1>Todos</h1>
     <div class= "container">
     <ul id= "tasks"></ul>
     <input type="text" id="userInput">
@@ -22,4 +22,7 @@
 
 
 </body>
+<footer>
+    <p>Written by: Allan Andersson and Axel Cullbrand</p>
+</footer>
 </html>
