--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -14,11 +14,9 @@
 
 
     <h1>Todos</h1>
-    <div class= "container">
     <ul id= "tasks"></ul>
-    <input type="text" id="userInput">
+    <input type="text" id="userInput" placeholder="What needs to get done?">
     <button onclick="addListItem()">Add</button>
-    </div>
 
 
 </body>
