Delete button added

--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -14,10 +14,12 @@
 
 
     <h1>Todos</h1>
+    <div class="buttontask">
+        <input type="text" id="userInput" placeholder="What needs to get done?" autofocus>
+        <button id="clicked" onclick=addListItem()>Add</button>
+        <!-- " -->
+    </div>
     <ul id= "tasks"></ul>
-    <input type="text" id="userInput" placeholder="What needs to get done?">
-    <button onclick="addListItem()">Add</button>
-
 
 </body>
 <footer>
