--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -5,19 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-bKuJGQIa7VjrXrFp0frVZlfJmj86K/jw4t4m4+W7d1t88y1tKQC9h/U5+5EN5LO5LZPbTwYQ25/E2NvDfWg3bw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 
 </head>
 <body>
 
-
     <h1>Todos</h1>
     <div class="buttontask">
         <input type="text" id="userInput" placeholder="What needs to get done?" autofocus>
         <button id="clicked" onclick=addListItem()>Add</button>
-        <!-- " -->
     </div>
     <ul id= "tasks"></ul>
 
