--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -18,7 +18,14 @@
         <button id="clicked" onclick=addListItem()>Add</button>
     </div>
     <ul id= "tasks"></ul>
-
+<footer>
+    <span class="itemsLeft">Items left</span>
+    <ul class="sorting">
+        <li class="all">All</li>
+        <li class="active">Active</li>
+        <li class="completed">Completed</li>
+    </ul>
+</footer>
 </body>
 <footer>
     <p>Written by: Allan Andersson and Axel Cullbrand</p>
