--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-bKuJGQIa7VjrXrFp0frVZlfJmj86K/jw4t4m4+W7d1t88y1tKQC9h/U5+5EN5LO5LZPbTwYQ25/E2NvDfWg3bw==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-bKuJGQIa7VjrXrFp0frVZlfJmj86K/jw4t4m4+W7d1t88y1tKQC9h/U5+5EN5LO5LZPbTwYQ25/E2NvDfWg3bw=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 
 </head>
+
 <body>
 
     <h1>Todos</h1>
@@ -17,17 +21,24 @@
         <input type="text" id="userInput" placeholder="What needs to get done?" autofocus>
         <button id="clicked" onclick=addListItem()>Add</button>
     </div>
-    <ul id= "tasks"></ul>
-<footer>
-    <span class="itemsLeft">Items left</span>
-    <ul class="sorting">
-        <li class="all">All</li>
-        <li class="active">Active</li>
-        <li class="completed">Completed</li>
-    </ul>
-</footer>
+    <ul id="tasks"></ul>
+    <footer>
+        <span class="itemsLeft">Items left</span>
+        <ul class="sorting">
+            <li>
+                <button name="all">All</button>
+            </li>
+            <li>
+                <Button name="active">Active</Button>
+            </li>
+            <li>
+                <Button name="completed">Completed</Button>
+            </li>
+        </ul>
+    </footer>
 </body>
 <footer>
     <p>Written by: Allan Andersson and Axel Cullbrand</p>
 </footer>
+
 </html>
