Added a form around input buttons

--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -17,10 +17,10 @@
 <body>
 
     <h1>Todos</h1>
-    <div class="buttontask">
+    <form class="buttontask">
         <input type="text" id="userInput" placeholder="What needs to get done?" autofocus>
-        <button id="clicked" onclick=addListItem()>Add</button>
-    </div>
+        <button type="submit">Add</button>
+    </form>
     <ul id="tasks"></ul>
     <footer>
         <span class="itemsLeft">Items left</span>
