Made the itemsleft text only appear if some tasks exist

--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -23,7 +23,7 @@
     </form>
     <ul id="tasks"></ul>
     <footer>
-        <span class="itemsLeft">Items left</span>
+        <span class="itemsLeft"></span>
         <ul class="sorting">
             <li>
                 <button name="all">All</button>
