toggleAllButton added out of work

--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -36,7 +36,8 @@
                 <Button name="completed">Completed</Button>
             </li>
         </ul>
-        <button>Remove all</button>
+        <button id="removeAll">Remove all</button>
+        <input type="checkbox" id="toggleAll" name="🔽">
     </footer>
 </section>
 
