--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -23,7 +23,7 @@
         <button type="submit" hidden></button>
     </form>
     <ul id="tasks"></ul>
-    <footer class="todoFooter" hidden>
+    <footer class="todoFooter hidden">
         <span class="itemsLeft"></span>
         <ul class="sorting">
             <li>
