--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -15,35 +15,38 @@
 </head>
 
 <body>
-<section class="app">
-    <h1>Todos</h1>
-    <form class="buttontask">
-        <input type="text" id="userInput" placeholder="What needs to get done?" autofocus>
-        <!-- button exist to make submit on enter to work -->
-        <button type="submit" hidden></button>
-    </form>
-    <ul id="tasks"></ul>
-    <footer class="todoFooter hidden">
-        <span class="itemsLeft"></span>
-        <ul class="sorting">
-            <li>
-                <button name="all">All</button>
-            </li>
-            <li>
-                <Button name="active">Active</Button>
-            </li>
-            <li>
-                <Button name="completed">Completed</Button>
-            </li>
-        </ul>
-        <button id="removeAll">Remove all</button>
-        <input type="checkbox" id="toggleAll" name="🔽">
-    </footer>
-</section>
+    <section class="app">
+        <h1>Todos</h1>
+        <div id="searchPart">
 
-<footer class="creds">
-    <p>Written by: Allan Andersson and Axel Cullbrand</p>
-</footer>
+            <button>🔽</button>
+            <form class="buttontask">
+                <input type="text" id="userInput" placeholder="What needs to get done?" autofocus>
+                <!-- button exist to make submit on enter to work -->
+                <button type="submit" hidden></button>
+            </form>
+        </div>
+        <ul id="tasks"></ul>
+        <footer class="todoFooter hidden">
+            <span class="itemsLeft"></span>
+            <ul class="sorting">
+                <li>
+                    <button name="all">All</button>
+                </li>
+                <li>
+                    <Button name="active">Active</Button>
+                </li>
+                <li>
+                    <Button name="completed">Completed</Button>
+                </li>
+            </ul>
+            <button id="removeAll">Remove all</button>
+        </footer>
+    </section>
+
+    <footer class="creds">
+        <p>Written by: Allan Andersson and Axel Cullbrand</p>
+    </footer>
 
 </body>
 
