moved toggle all button

--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -19,7 +19,7 @@
         <h1>Todos</h1>
         <div id="searchPart">
 
-            <button>🔽</button>
+            <button class="toggleButton hidden">🔽</button>
             <form class="buttontask">
                 <input type="text" id="userInput" placeholder="What needs to get done?" autofocus>
                 <!-- button exist to make submit on enter to work -->
