Fixed adding new stuff

--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -39,7 +39,7 @@
                     <Button name="completed">Completed</Button>
                 </li>
             </ul>
-            <button id="deleteAll">Remove all</button>
+            <button id="deleteAll">Remove all done</button>
         </footer>
     </section>
 
