reworked some code

--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -16,8 +16,7 @@
         <h1>Todos</h1>
         <div id="searchPart">
 
-            <!-- <button class="toggleAll hidden">🔽</button> -->
-            <input type="checkbox" id="toggleAll">
+            <button class="toggleButton hidden">🔽</button>
 
             <form class="buttontask">
                 <input type="text" id="userInput" placeholder="What needs to get done?" autofocus>
@@ -39,7 +38,7 @@
                     <Button name="completed">Completed</Button>
                 </li>
             </ul>
-            <button id="deleteAll">Remove all done</button>
+            <button id="deleteAll" hidden>Remove all done</button>
         </footer>
     </section>
 
@@ -48,4 +47,5 @@
     </footer>
 
 </body>
+
 </html>
