Changed some colors and font

--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <section class="app">
-        <h1>Todos</h1>
+        <h1>todos</h1>
         <div id="searchPart">
 
             <button class="toggleButton hidden">🔽</button>
