Selected moves between butons

--- a/Inlämning3/index.html
+++ b/Inlämning3/index.html
@@ -29,7 +29,7 @@
             <span class="itemsLeft"></span>
             <ul class="sorting">
                 <li>
-                    <button name="all">All</button>
+                    <button name="all" class="selected">All</button>
                 </li>
                 <li>
                     <Button name="active">Active</Button>
