--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Online budget tracker</title>
+    <h1>Personal expense tracker</h1>
+    <div class="total-spent">0kr</div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
     <div id="app">
-        <h1> Personal expense tracker</h1>
         <form @submit.prevent="addExpense">
-            <label for="name">Name:</label>
-            <input type="text" id="name" v-model="name" required>
-            <label for="amount">Amount:</label>
-            <input type="number" id="amount" v-model="amount" required>
-            <label for="date">Date:</label>
+            <input type="text" id="name" placeholder="Enter product" v-model="name" required>
+            <input type="number" id="amount" placeholder="Enter cost" v-model="amount" required>
             <input type="date" id="date" v-model="date" required>
             <button type="submit">Add Expense</button>
           </form>
