Moved h1 to body and wrote a test button and function

--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online budget tracker</title>
-    <h1>Personal expense tracker</h1>
     <div class="total-spent">0kr</div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="main.js" defer></script>
 </head>
+
 <body>
+    <h1>Personal expense tracker</h1>
     <div id="app">
         <form @submit.prevent="addExpense">
             <input type="text" id="name" placeholder="Enter product" v-model="name" required>
             <input type="number" id="amount" placeholder="Enter cost" v-model="amount" required>
             <input type="date" id="date" v-model="date" required>
             <button type="submit">Add Expense</button>
-          </form>
+        </form>
+
+
+        <button @click="test">test button</button>
     </div>
-    
 </body>
+
 </html>
