added some seed data and some things for local storage

--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -8,6 +8,7 @@
     <title>Online budget tracker</title>
     <div class="total-spent">0kr</div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="seedData.json"></script>
     <script src="main.js" defer></script>
 </head>
 
