--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online budget tracker</title>
-    <div class="totalSpent">{{ totalSpent }}kr</div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
 
 <body>
     <h1>Personal expense tracker</h1>
+    <!-- <div class="totalSpent">{{ totalSpent }}kr</div> -->
     <div id="app">
         <form @submit.prevent="addExpense">
             <input type="text" id="name" placeholder="Enter product" v-model="name" required>
@@ -20,9 +21,24 @@
             <input type="date" id="date" v-model="date" required>
             <button type="submit">Add Expense</button>
         </form>
+        <h2>Expense list</h2>
+        <table>
+            <tr>
+                <th>Product</th>
+                <th>Cost</th>
+                <th>Date</th>
+            </tr>
+            <tr v-for="(expense, index) in transactionList" :key="index">
+                <td>{{ expense.name }}</td>
+                <td>{{ expense.amount }}</td>
+                <td>{{ expense.date }}</td>
+                <td>
+                <button @click="deleteExpense(index)">Delete</button>
+                </td>
+            </tr>
+        </table>
 
-
-
+        <div class="totalSpent">{{ totalSpent }}kr</div>
 
         <canvas id="pieCanvas" width="200" height="200"></canvas>
         <button @click="updatePie">test pie</button>
