pie shart mostly working

--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -29,6 +29,7 @@
             <tr>
                 <th>Product</th>
                 <th>Cost</th>
+                <th>Category</th>
                 <th>Date</th>
             </tr>
             <tr v-for="(expense, index) in transactionList" :key="index">
