--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -43,7 +43,7 @@
             </tr>
         </table>
 
-        <div class="totalSpent">{{ totalSpentFormatted }} kr</div>
+        <div class="totalSpent">{{ totalSpentFormatted }}</div>
         <canvas id="pieCanvas" width="200" height="200"></canvas>
         <button @click="updatePie">test pie</button>
     </div>
