--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -14,7 +14,6 @@
 <body>
     <h1>Personal expense tracker</h1>
     <div id="app">
-
         <form @submit.prevent="addExpense">
             <input type="text" id="name" placeholder="Enter product" v-model="name" required>
             <input type="number" id="amount" placeholder="Enter cost" v-model="amount" required>
@@ -26,26 +25,35 @@
         </form>
 
         <table class="expenses">
-            <tr>
-                <th>Product</th>
-                <th>Cost</th>
-                <th>Category</th>
-                <th>Date</th>
-            </tr>
-            <tr v-for="(expense, index) in transactionList" :key="index">
-                <td>{{ expense.name }}</td>
-                <td>{{ expense.amount }}</td>
-                <td>{{ expense.category }}</td>
-                <td>{{ expense.date }}</td>
-                <td>
-                    <button @click="deleteExpense(index)">Delete</button>
-                </td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Product</th>
+                    <th>Cost</th>
+                    <th>Category</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody v-for="(group,name) in getgroupOnMonth()">
+                <tr><td>{{name}}</td></tr>
+                <tr v-for="(expense, index) in sortListOnDate(group)" :key="index">
+                    <td>{{ expense.name }}</td>
+                    <td>{{ expense.amount }}</td>
+                    <td>{{ expense.category }}</td>
+                    <td>{{ expense.date }}</td>
+                    <td>
+                        <button @click="deleteExpense(index)">Delete not working working on fix</button>
+                    </td>
+                </tr>
+            </tbody>
+
         </table>
 
-        <div class="totalSpent">{{ totalSpentFormatted }}</div>
+        <div class="totalSpent">{{ totalSpent }}kr</div>
+
         <canvas id="pieCanvas" width="200" height="200"></canvas>
         <button @click="updatePie">test pie</button>
+
+
     </div>
 
 </body>
