delete works again

--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -36,12 +36,12 @@
             <tbody v-for="(group,name) in getgroupOnMonth()">
                 <tr><td>{{name}}</td></tr>
                 <tr v-for="(expense, index) in sortListOnDate(group)" :key="index">
-                    <td>{{ expense.name }}</td>
-                    <td>{{ expense.amount }}</td>
-                    <td>{{ expense.category }}</td>
-                    <td>{{ expense.date }}</td>
+                    <td>{{ expense.data.name }}</td>
+                    <td>{{ expense.data.amount }}</td>
+                    <td>{{ expense.data.category }}</td>
+                    <td>{{ expense.data.date }}</td>
                     <td>
-                        <button @click="deleteExpense(index)">Delete not working working on fix</button>
+                        <button @click="deleteExpense(expense.index)">Delete</button>
                     </td>
                 </tr>
             </tbody>
