Maybe working sortbydate

--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -49,6 +49,7 @@
         </table>
 
         <div class="totalSpent">{{ totalSpent }}kr</div>
+        <button @click="sortListByDate">Sort by date</button>
 
         <canvas id="pieCanvas" width="200" height="200"></canvas>
         <button @click="updatePie">test pie</button>
