--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -35,11 +35,11 @@
             </thead>
             <tbody v-for="(group,name) in getgroupOnMonth()">
                 <tr><td>{{name}}</td></tr>
-                <tr v-for="(expense, index) in sortListOnDate(group)" :key="index">
-                    <td>{{ expense.data.name }}</td>
-                    <td>{{ expense.data.amount }}</td>
-                    <td>{{ expense.data.category }}</td>
-                    <td>{{ expense.data.date }}</td>
+                <tr v-for="(expense, index) in transactionList" :key="index">
+                    <td>{{ expense.name }}</td>
+                    <td>{{ expense.amount }}</td>
+                    <td>{{ expense.category }}</td>
+                    <td>{{ expense.date }}</td>
                     <td>
                         <button @click="deleteExpense(expense.index)">Delete</button>
                     </td>
@@ -48,7 +48,7 @@
 
         </table>
 
-        <div class="totalSpent">{{ totalSpent }}kr</div>
+        <div class="totalSpent">{{ totalSpentFormatted }}</div>
         <button @click="sortListByDate">Sort by date</button>
 
         <canvas id="pieCanvas" width="200" height="200"></canvas>
