--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -51,6 +51,7 @@
         </table>
 
         <div class="totalSpent">{{ totalSpentFormatted }}</div>
+        <button @click="deleteByMonth(month, year)">Delete Month</button>
 
         <canvas id="pieCanvas" width="200" height="200"></canvas>
         <button @click="updatePie">test pie</button>
