--- a/inlämning4/index.html
+++ b/inlämning4/index.html
@@ -51,10 +51,10 @@
         </table>
 
         <div class="totalSpent">{{ totalSpentFormatted }}</div>
-        <button @click="deleteByMonth(month, year)">Delete Month</button>
+        <button @click="deleteByMonth(month)">Delete Month</button>
 
         <canvas id="pieCanvas" width="200" height="200"></canvas>
-        <button @click="updatePie">test pie</button>
+        <button @click="updatePie">Show pie</button>
 
 
     </div>
